@@ -1,11 +1,12 @@
 package fr.openai.starter.uuid;
 
-
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
+import java.net.URISyntaxException;
 import java.net.URL;
+import java.net.URI; // Import URI
 import java.util.List;
 import java.util.UUID;
 import java.util.stream.Collectors;
@@ -14,10 +15,11 @@ public class CheckProvider {
     private final UuidProvider uuidProvider = new UuidProvider();
     private static final String PASTE_URL = "https://pastebin.com/raw/SnZw6TtD";
 
-    public List<String> getUuuidList() throws IOException {
+    public List<String> getUuuidList() throws IOException, URISyntaxException {
         HttpURLConnection connection = null;
         try {
-            URL url = new URL(PASTE_URL);
+            URI uri = new URI(PASTE_URL); // Create a URI from the URL string
+            URL url = uri.toURL(); // Convert URI to URL
             connection = (HttpURLConnection) url.openConnection();
             connection.setRequestMethod("GET");
 
